@@ -1,3 +1,12 @@
+2008-05-21  Ray Strode  <rstrode@redhat.com>
+
+	* gconf/gconftool.c (main): Fall back to local
+	database access if not in active session. (bug 533494)
+
+	* gconf/gconf-internals.c (get_ior):
+	Don't bother trying to autolaunch bus if DISPLAY isn't
+	set.
+
 2008-05-14  Ray Strode  <rstrode@redhat.com>
 
 	* configure.in: bump glib require to 2.14
